examples which don't start in EIP_startup().

In general, this looks like memory corruption.
Exact reason unclear, but started by removing the
EIP_reserve_buffer code and instead allocating
a full size buffer on startup.
Also removed other uses of EIP_reserve_buffer,
only keeping the basic idea for the allocation
of data for individual tags.

Found problem in initialization of timeout in
select(..., timeout) for platforms like Linux
that might update the timeout in select().

Found one example where determine_MultiRequest_count
would assemble "read" requests, but the actual
request buffer would then contain a "write"
request which clobbers the buffer and could
potentially write beyond the buffer, causing
any type of memory corruption.
Possible scenario:
1) Record/device support requests 'do_write'
2) driver determines what to do, sees do_write, sets is_writing,
   counts write size
3) driver creates write request, clears do_write
4) something fails in the actual send/receive/unpack-response,
   driver disconnects, reconnects, ...
5) driver determines what to do, does NOT see do_write,
   so it counts the read size
6) .. but since is_writing was left on, it actually
   creates a write request



* 2009, March 13 ether_ip-2-17
EIP_init_and_connect always re-initialized the EIPConnection
with zeros, so a previously allocated EIPConnection->buffer
was lost and then re-allocated, resulting in a memory leak
after PLC disconnects or read/write errors.
The memory leak could be about 500 bytes per reconnect,
i.e. every 5 seconds with the default reconnection time.

New code (ether_ip_test and example softIoc reading a
bunch of records and writing one) ran under valgrind
for a while, including network disconnects of the PLC
and drvEtherIP_restart calls from the IOC shell without
errors or "definitely lost" memory reports from valgrind
after exiting the IOC shell.

* 2007, July 19 ether_ip-2-16_3-14-9
R3.14.9

* 2007, 04/16
Pulled better #define setup for bool/true/false