@@ -113,13 +113,12 @@ typedef int               SOCKET;
  *  0: keep quiet
  */
 extern int EIP_verbosity;
-/* Should output go onto console
- * or into mem_string_file ?
- */
-extern eip_bool EIP_use_mem_string_file;
 
 /* print if EIP_verbosity >= level */
 void EIP_printf(int level, const char *format, ...);
+
+/* print with time stamp if EIP_verbosity >= level */
+void EIP_printf_time(int level, const char *format, ...);
 
 void EIP_hexdump(int level, const void *_data, int len);
 
